[package]
name = "jasper-fanin"
version = "0.1.0"
edition = "2021"
description = "JTS renderer fan-in: sums per-renderer snd-aloop substreams into a single summed-music output stream for CamillaDSP + AEC bridge."
license = "Apache-2.0"
repository = "https://github.com/jaspercurry/JTS"
authors = ["Jasper Curry <jaspercurry@gmail.com>"]
rust-version = "1.75"

# Why these dependencies — pinned to current stable versions on Trixie's
# rustc (1.75+). See docs/HANDOFF-fan-in-daemon.md "Why Rust" for the
# language-choice rationale.
[dependencies]
jasper-tts-protocol = { path = "../jasper-tts-protocol" }
# The ONE shared windowed-sinc resampler + DLL rate controller (same crate
# jasper-outputd's content_bridge consumes). Pure, no ALSA — used here for the
# DEFAULT-OFF per-input adaptive resampler on the clock-crossing (USB) lane,
# DLL-steered to the DAC clock. See src/lane_resampler.rs and
# docs/HANDOFF-usb-low-latency.md.
jasper-resampler = { path = "../jasper-resampler" }
# The SPSC ping-pong SHM ring — the same crate jasper-outputd's Ring B reader
# consumes. Pure (mmap via libc, no ALSA). Ring A (PROTOTYPE, flag-gated behind
# JASPER_FANIN_CAMILLA_COUPLING=shm_ring) uses its production RingWriter as the
# Output::Ring publish half; CamillaDSP reads it via a capture-direction ioplug.
jasper-ring = { path = "../jasper-ring" }
# The shared host-slaved USB clock ladder + servo + ALSA pitch actuator (the
# same crate jasper-usbsink-audio consumes for solo mode). In combo mode
# (JASPER_FANIN_USB_DIRECT=enabled) fan-in owns the gadget capture, so the
# `fanin-host-clock` thread drives this to steer the host's Capture Pitch ctl
# toward the DAC clock. The `alsa` feature enables the real `AlsaPitchCtl`;
# fan-in always links libasound so it is enabled unconditionally here. Default
# OFF via JASPER_FANIN_HOST_CLOCK. See docs/HANDOFF-usb-low-latency.md.
jasper-host-clock = { path = "../jasper-host-clock", features = ["alsa"] }
# Idiomatic Rust wrapper around libasound — the daemon's primary I/O
# surface. Mature crate, used by most Rust ALSA projects (paplay,
# pulse-pipewire-bridge, etc.). Compiles against Trixie's
# libasound2-dev.
alsa = "0.11"

# systemd notification socket: READY=1 on startup, WATCHDOG=1 keepalives,
# STOPPING=1 on shutdown. The Type=notify + WatchdogSec=30s contract
# in deploy/systemd/jasper-fanin.service requires this.
sd-notify = "0.5"

# Structured logging to stderr. journald captures it; the daemon's
# stdout/stderr are how it surfaces event= lines for jasper-trace.sh
# and the /state aggregator to consume.
log = "0.4"
env_logger = "0.11"

# Signal handling that doesn't fight async/tokio. We're a plain-thread
# daemon (no async runtime), so signal-hook's flag pattern is the
# right shape.
signal-hook = "0.4"

# Top-level error ergonomics. Internal modules may use thiserror for
# structured errors; anyhow is the catch-all at main().
anyhow = "1"

# Direct libc bindings — needed for mlockall (the in-process
# belt-and-suspenders alongside the systemd unit's LimitMEMLOCK=infinity
# and Slice=jts-audio.slice MemorySwapMax=0).
libc = "0.2"

# JSON parsing for the relocated impulse-tap arm-body endpoint
# (src/impulse_tap.rs `TapConfig::from_arm_body`). NOTE: state.rs's STATUS
# response is still hand-rolled JSON with NO serde — the "no serde_json" note
# in that module's docstring covers the response-emit side, which is small and
# stable. The tap-arm PARSE side is a mixed string/number/bool object with
# integral-float coercion and reserved-path rejection; it was ported verbatim
# from jasper-usbsink-audio (which already carries this dep) and re-hand-rolling
# a correctness-critical object parser for the PoC would trade a large new
# surface for marginal binary savings. serde's proc-macro machinery is already
# in the lock via jiff, so the delta here is small. Revisit at hardening if the
# fan-in binary size ever matters.
serde_json = "1"

[profile.release]
# Optimize aggressively. The hot path (per-frame mixer) is small;
# compile time isn't a concern on a Pi 5. Smaller binary via
# strip=debuginfo (keep symbols for crash debugging via journald;
# strip the dwarf section). panic=abort because we don't want to
# unwind from a panic in audio code anyway — let the daemon die,
# systemd restarts in ~2s.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[[bin]]
name = "jasper-fanin"
path = "src/main.rs"
