[package]
name = "jasper-host-clock"
version = "0.1.0"
edition = "2021"
description = "JTS host-slaved USB clock: the daemon-agnostic ladder + probe + servo + write-gate that steers the UAC2 gadget's Capture Pitch ctl so the host tracks the DAC clock."
license = "Apache-2.0"
repository = "https://github.com/jaspercurry/JTS"
authors = ["Jasper Curry <jaspercurry@gmail.com>"]
# MSRV: uses `map_or` (not `is_none_or`, stable 1.82) so this crate — and the
# feature-gated `AlsaPitchCtl` actuator — compiles under the pinned 1.85.0 CI
# toolchain with clippy's `incompatible_msrv` lint honoring 1.75. Same floor as
# both consumers (jasper-usbsink-audio, jasper-fanin).
rust-version = "1.75"

[dependencies]
# The pure, allocation-free clock-tracking DLL (a PipeWire spa_dll port). The
# outer pitch loop composes `jasper_clock::Dll` directly, exactly as
# jasper-outputd / jasper-resampler already do. No ALSA, so the ladder/servo
# logic and its tests build on a macOS host with a bare `cargo test`.
jasper-clock = { path = "../jasper-clock" }
log = "0.4"
# The real ALSA pitch actuator (`AlsaPitchCtl`) is behind an off-by-default
# feature so `cargo test` on a macOS host (no libasound) is pure. Consumers
# enable it: usbsink under its own `alsa-runtime`, fan-in unconditionally.
alsa = { version = "0.11", optional = true }

[dev-dependencies]
# One in-module test asserts the status_fragment() byte shape is valid JSON.
serde_json = "1"

[features]
default = []
# Compile the real ALSA `AlsaPitchCtl` actuator (name-based element resolution).
# Off by default so the pure ladder/servo tests link on any host.
alsa = ["dep:alsa"]

[lib]
name = "jasper_host_clock"
path = "src/lib.rs"
