[package]
name = "jasper-outputd"
version = "0.1.0"
edition = "2021"
description = "JTS final-output owner: writes the final DAC sink and publishes output health/reference taps."
license = "Apache-2.0"
repository = "https://github.com/jaspercurry/JTS"
authors = ["Jasper Curry <jaspercurry@gmail.com>"]
rust-version = "1.75"

[dependencies]
jasper-tts-protocol = { path = "../jasper-tts-protocol" }
# The shared clock-tracking DLL (spa_dll port). outputd composes it for the
# observe-only software-AEC reference drift estimate (and, from Inc 3, the
# converged chip-AEC SRO / content-bridge rate loops). Pure, no ALSA.
jasper-clock = { path = "../jasper-clock" }
# The shared windowed-sinc resampler + rate controller. content_bridge consumes
# its SincTable / AudioRing / RateController (extracted from content_bridge so
# the usbsink C++ binding and this daemon share one algorithm). Pure, no ALSA;
# itself depends on jasper-clock for the control law.
jasper-resampler = { path = "../jasper-resampler" }
# Same ALSA wrapper used by jasper-fanin. outputd's ALSA backend reads
# Camilla's post-DSP loopback lane and writes the final DAC directly.
alsa = "0.11"

# Top-level error context for daemon startup and I/O failures.
anyhow = "1"

# errno constants for ALSA xrun recovery.
libc = "0.2"

# Plain-thread signal handling for clean systemd stop.
signal-hook = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[[bin]]
name = "jasper-outputd"
path = "src/main.rs"
