[package]
name = "jasper-usbsink-audio"
version = "0.1.0"
edition = "2021"
description = "JTS USB sink audio bridge: UAC2 gadget capture into the fan-in usbsink ALSA lane."
license = "Apache-2.0"
repository = "https://github.com/jaspercurry/JTS"
authors = ["Jasper Curry <jaspercurry@gmail.com>"]
rust-version = "1.75"

[dependencies]
# Same mature ALSA wrapper used by jasper-fanin and jasper-outputd. This daemon
# is intentionally just an ALSA data-plane bridge: capture from the UAC2 gadget,
# deterministic S32_LE->S16_LE narrowing, bounded period ring, playback into
# the usbsink loopback lane.
alsa = { version = "0.11", optional = true }
anyhow = "1"
# Pure, allocation-free, dependency-free clock-tracking DLL (a PipeWire spa_dll
# port). Non-optional — it compiles under `--no-default-features` (no ALSA), so
# the host-clock ladder/servo logic and its tests build on a macOS host. The
# outer pitch loop composes `jasper_clock::Dll` directly, exactly as
# jasper-outputd / jasper-resampler already do.
jasper-clock = { path = "../jasper-clock" }
# The ONE shared S32→S16 UAC2 narrowing (this crate also holds the windowed-sinc
# resampler jasper-fanin uses for the direct lane). Pure, no ALSA — compiles
# under `--no-default-features` on a macOS host. Consuming
# `s32_high_word_to_s16` / `convert_s32_to_s16` from here (rather than a local
# copy) makes the bridge's narrowing bit-identical to jasper-fanin's
# direct-capture narrowing by construction (C2).
jasper-resampler = { path = "../jasper-resampler" }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
serde_json = "1"
sd-notify = { version = "0.5", optional = true }
signal-hook = { version = "0.4", optional = true }

[features]
default = ["alsa-runtime"]
alsa-runtime = ["dep:alsa", "dep:sd-notify", "dep:signal-hook"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[[bin]]
name = "jasper-usbsink-audio"
path = "src/main.rs"
