[package]
name = "jasper-usbsink-audio"
version = "0.1.0"
edition = "2021"
description = "JTS USB sink audio bridge: UAC2 gadget capture into the fan-in usbsink ALSA lane."
license = "Apache-2.0"
repository = "https://github.com/jaspercurry/JTS"
authors = ["Jasper Curry <jaspercurry@gmail.com>"]
rust-version = "1.75"

[dependencies]
# Same mature ALSA wrapper used by jasper-fanin and jasper-outputd. This daemon
# is intentionally just an ALSA data-plane bridge: capture from the UAC2 gadget,
# deterministic S32_LE->S16_LE narrowing, bounded period ring, playback into
# the usbsink loopback lane.
alsa = { version = "0.11", optional = true }
anyhow = "1"
# The shared host-slaved USB clock: ladder + probe + servo + write-gate +
# (feature-gated) ALSA pitch actuator. The pure ladder/servo compiles under
# `--no-default-features` (no ALSA); the real `AlsaPitchCtl` is behind the
# crate's `alsa` feature, enabled here only under this crate's `alsa-runtime`
# (see [features]). fan-in consumes the SAME crate for combo mode, so the two
# daemons share byte-identical servo semantics by construction.
jasper-host-clock = { path = "../jasper-host-clock" }
# The ONE shared S32→S16 UAC2 narrowing (this crate also holds the windowed-sinc
# resampler jasper-fanin uses for the direct lane). Pure, no ALSA — compiles
# under `--no-default-features` on a macOS host. Consuming
# `s32_high_word_to_s16` / `convert_s32_to_s16` from here (rather than a local
# copy) makes the bridge's narrowing bit-identical to jasper-fanin's
# direct-capture narrowing by construction (C2).
jasper-resampler = { path = "../jasper-resampler" }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
serde_json = "1"
sd-notify = { version = "0.5", optional = true }
signal-hook = { version = "0.4", optional = true }

[features]
default = ["alsa-runtime"]
# `alsa-runtime` is the production build: the ALSA data plane plus the shared
# host-clock crate's `alsa` feature (the real `AlsaPitchCtl`). Under
# `--no-default-features` the pure host-clock ladder/servo still compiles on a
# macOS host, and the `#[cfg(feature = "alsa-runtime")]`-gated `AlsaPitchCtl`
# re-export in host_clock.rs is simply absent.
alsa-runtime = ["dep:alsa", "dep:sd-notify", "dep:signal-hook", "jasper-host-clock/alsa"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[[bin]]
name = "jasper-usbsink-audio"
path = "src/main.rs"
