[package]
name = "jasper-usbsink-audio"
version = "0.1.0"
edition = "2021"
description = "JTS USB sink standby daemon: USB-audio intent signal + liveness + state.json (fan-in owns the gadget capture)."
license = "Apache-2.0"
repository = "https://github.com/jaspercurry/JTS"
authors = ["Jasper Curry <jaspercurry@gmail.com>"]
rust-version = "1.75"

[dependencies]
anyhow = "1"
# The shared audio-floor constant (`RMS_DBFS_FLOOR`) the state publisher seeds the
# idle `rms_dbfs` with. Pure, no ALSA — compiles under `--no-default-features` on a
# macOS host. (The daemon no longer narrows S32→S16 or captures any audio; the
# combo direct-capture path in jasper-fanin owns that. jasper-fanin still consumes
# this crate for the shared narrowing.)
jasper-resampler = { path = "../jasper-resampler" }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
serde_json = "1"
sd-notify = { version = "0.5", optional = true }
signal-hook = { version = "0.4", optional = true }

[features]
default = ["alsa-runtime"]
# `alsa-runtime` is the production (Linux) build: the systemd `Type=notify`
# liveness plumbing (sd-notify) and signal handling. Despite the historical name
# the daemon no longer opens any ALSA PCM — it is a standby-only intent/liveness
# daemon. Under `--no-default-features` the pure logic + tests still compile on a
# macOS host (the real `main` is replaced by a `bail!` stub).
alsa-runtime = ["dep:sd-notify", "dep:signal-hook"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[[bin]]
name = "jasper-usbsink-audio"
path = "src/main.rs"
